# darling-cocotron

./: .clang-format  .gitignore  CMakeLists.txt  README.md
AppKit/: CMakeLists.txt  MacWorkspace.h  MacWorkspace.m  NSATSTypesetter.m  NSAccessibility.m  NSAccessibilityCustomChooser.m  NSAccessibilityElement.m  NSAccessibilityRemoteUIElement.m  NSActionCell.m  NSAffineTransform.m  NSAlert.m  NSAlertPanel.h  NSAlertPanel.m  NSAppearance.m  NSApplication.m  NSAttributedString.m  NSBezierPath.m  NSBitmapImageRep-Private.h  NSBitmapImageRep.m  NSBox.m  NSBrowser.m  NSBrowserCell.m  NSButton.m  NSButtonCell.m  NSCIImageRep.m  NSCachedImageRep.m  NSCachingBinder.h  NSCandidateListTouchBarItem.m  NSCatalogColor.m  NSCell.m  NSCellUndoManager.h  NSCellUndoManager.m  NSClickGestureRecognizer.m  NSClipView.m  NSCoder+AppKit.h  NSCoder+AppKit.m  NSCollectionViewFlowLayout.m  NSCollectionViewLayout.m  NSCollectionViewLayoutAttributes.m  NSCollectionViewLayoutInvalidationContext.m  (+224 more)
CFNetwork/: CFHost.h  CFHost.m  CFNetwork.h  CFSocketStream.h  CFSocketStream.m
CFSSLHandler_openssl/: CFSSLHandler_openssl.h  CFSSLHandler_openssl.m
Cocoa/: CMakeLists.txt  Cocoa.h  Cocoa.m
CommonCrypto/: CommonCryptor.h  CommonCryptor.m  CommonHMAC.m  dllmain.m
CoreData/: CMakeLists.txt  CoreDataErrors.m  NSAtomicStore.m  NSAtomicStoreCacheNode.m  NSAttributeDescription.m  NSEntityDescription-Private.h  NSEntityDescription.m  NSEntityMapping.m  NSFetchRequest.m  NSFetchRequestExpression.m  NSFetchedPropertyDescription.m  NSInMemoryPersistentStore.h  NSInMemoryPersistentStore.m  NSManagedObject-Private.h  NSManagedObject.m  NSManagedObjectContext-Private.h  NSManagedObjectContext.m  NSManagedObjectID-Private.h  NSManagedObjectID.m  NSManagedObjectModel.m  NSManagedObjectMutableSet.h  NSManagedObjectMutableSet.m  NSManagedObjectSet.h  NSManagedObjectSet.m  NSManagedObjectSetEnumerator.h  NSManagedObjectSetEnumerator.m  NSMappingModel.m  NSMergeConflict.m  NSMergePolicy.m  NSPersistentStore.m  NSPersistentStoreCoordinator-Private.h  NSPersistentStoreCoordinator.m  NSPropertyDescription.m  NSPropertyMapping.m  NSRelationshipDescription.m  NSXMLPersistentStore.m
CoreGraphics/: CGAffineTransform.m  CGBitmapContext.m  CGColor.m  CGColorSpace.m  CGContext.m  CGConversions.h  CGDataConsumer.m  CGDataProvider.m  CGDirectDisplay.m  CGDisplayConfiguration.m  CGDisplayFade.m  CGDisplayStream.m  CGEvent.m  CGEventObjC.h  CGEventObjC.m  CGEventSource.m  CGEventTap.m  CGEventTapInternal.h  CGFont.m  CGFunction.m  CGGeometry.m  CGGradient.m  CGImage.m  CGLPixelSurface.m  CGLayer.m  CGPDFContext.m  CGPDFDocument.m  CGPDFPage.m  CGPSConverter.m  CGPath.m  CGPattern.m  CGRemoteOperation.m  CGS.m  CGSConnection.m  CGSKeyboardLayout.m  CGSRegion.m  CGSScreen.m  CGSSurface.m  CGSWindow.m  CGShading.m  (+4 more)
CoreGraphics/X11.backend/: CMakeLists.txt  X11KeySymToUCS.h  X11KeySymToUCS.m
CoreGraphics/include/CoreGraphics/: CGAffineTransform.h  CGBase.h  CGBitmapContext.h  CGColor.h  CGColorSpace.h  CGContext.h  CGDataConsumer.h  CGDataProvider.h  CGDirectDisplay.h  CGDisplayConfiguration.h  CGDisplayFade.h  CGDisplayStream.h  CGError.h  CGEvent.h  CGEventSource.h  CGEventTypes.h  CGFont.h  CGFunction.h  CGGeometry.h  CGGradient.h  CGImage.h  CGLPixelSurface.h  CGLayer.h  CGPDFContext.h  CGPDFDictionary.h  CGPDFDocument.h  CGPDFObject.h  CGPDFPage.h  CGPSConverter.h  CGPath.h  CGPattern.h  CGRemoteOperation.h  CGS.h  CGSConnection.h  CGSKeyboardLayout.h  CGSScreen.h  CGSSurface.h  CGSWindow.h  CGShading.h  CGSubWindow.h  (+5 more)
CoreGraphics/src/: CGEvent.c  stubs.c
CoreText/: CMakeLists.txt  CTFont.m  CTFontCollection.m  CTFontDescriptor.m  CTFontManager.m  CTFrame.m  CTFrameSetter.m  CTLine.m  CTParagraphStyle.m  CTRun.m  CTStringATtributes.m  KTFont.m  KTFont_FT.m  constants.c  stubs.c
CoreText/include/CoreText/: CTFont.h  CTFontCollection.h  CTFontDescriptor.h  CTFontManager.h  CTFontTraits.h  CTFrame.h  CTFrameSetter.h  CTLine.h  CTParagraphStyle.h  CTRun.h  CTStringAttributes.h  CTTypesetter.h  CoreText.h  KTFont.h  KTFont_FT.h
Foundation/: Foundation.h  NSAffineTransform.h  NSAffineTransform.m  NSArchiver.h  NSArchiver.m  NSAssertionHandler.h  NSAssertionHandler.m  NSBlocks.m  NSBundle.h  NSBundle.m  NSByteOrder.h  NSByteOrder.m  NSCFTypeID.h  NSClassDescription.h  NSClassDescription.m  NSCoder.h  NSCoder.m  NSConcreteDirectoryEnumerator.h  NSConcreteDirectoryEnumerator.m  NSDirectoryEnumerator.h  NSDirectoryEnumerator.m  NSDistributedLock.h  NSDistributedNotificationCenter.h  NSDistributedNotificationCenter.m  NSEnumerator.h  NSEnumerator.m  NSError.h  NSError.m  NSFileManager.h  NSFileManager.m  NSFormatter.h  NSFormatter.m  NSGeometry.h  NSGeometry.m  NSHashTable.h  NSHashTable.m  NSHost.h  NSHost.m  NSIndexPath.h  NSIndexPath.m  (+35 more)
IOKit/: IOKitLib.m
ImageKit/: IKImageBrowserView.h  IKImageBrowserView.m
NSSpellEngine_hunspell/: NSSpellEngine_hunspell.h  NSSpellEngine_hunspell.mm  NSSpellEngine_hunspellDictionary.h  NSSpellEngine_hunspellDictionary.mm
O2Context_AntiGrain/: O2Context_AntiGrain.h  O2Context_AntiGrain.mm  agg_font_cache_manager.h  agg_font_win32_tt.h  agg_font_win32_tt.mm  o2agg_pixfmt_rgba.h  o2agg_span_image_filter_rgba.h  partial_stack_blur.h
Onyx2D/: CMakeLists.txt  O2AffineTransform.m  O2BitmapContext.m  O2ClipPhase.m  O2ClipState.m  O2Color.m  O2ColorSpace+PDF.m  O2ColorSpace.m  O2Context.m  O2Context_builtin.m  O2Context_builtin_FT.m  O2Context_distill.m  O2DataConsumer.m  O2DataProvider.m  O2Decoder_TIFF.m  O2EXIFDecoder.m  O2Encoder_JPG.m  O2Encoder_PNG.m  O2Encoder_TIFF.m  O2Encoding.m  O2Font+PDF.m  O2Font.m  O2Font_freetype.m  O2Font_ttf.m  O2Function+PDF.m  O2Function.m  O2Geometry.m  O2GlyphStencil.m  O2GraphicsState.m  O2Image+PDF.m  O2Image.m  O2ImageDecoder.m  O2ImageDecoder_JPEG_libjpeg.m  O2ImageDecoder_JPEG_stb.m  O2ImageDestination.m  O2ImageSource.m  O2ImageSource_BMP.m  O2ImageSource_GIF.m  O2ImageSource_ICNS.m  O2ImageSource_JPEG.m  (+52 more)
PDFKit/: PDFDocument.h  PDFDocument.m  PDFDocumentView.h  PDFDocumentView.m  (+11 more)
examples/TextEditor/: CMakeLists.txt  Info.plist  MyDocument.m  main.m
(+1388 files in other folders)
